colour contrast fix

--- a/src/sass/_burtware.scss
+++ b/src/sass/_burtware.scss
@@ -416,6 +416,7 @@ main {
       border: 1px solid $amber;
       .badge {
         background: $amber !important;
+        color: black;
       }
     }
   }
